deleted excess code, created function to close panoramas when a new one is clicked (instead of overlapping), fixed web menu drawer height issue for resolution differences

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -249,7 +249,7 @@ html, body {
 
 }
 #menuDrawer{
-  height: auto;
+  height: 100%;
 }
 #drawerContents{
   height: 900px;
